[gd_scene load_steps=8 format=2]

[ext_resource path="res://minigames/minigame8/scripts/test.gd" type="Script" id=1]
[ext_resource path="res://minigames/minigame8/misc/font_unutterable_data.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://minigames/minigame8/textures/other/music_box_indicator.png" type="Texture" id=3]

[sub_resource type="ButtonGroup" id=2]

[sub_resource type="DynamicFont" id=3]
size = 32
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="ButtonGroup" id=4]

[sub_resource type="ButtonGroup" id=5]

[node name="test" type="ColorRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.25098, 0.25098, 0.25098, 1 )
script = ExtResource( 1 )

[node name="test0" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="title" type="Label" parent="test0"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -2.0
margin_top = 16.0
margin_right = 2.0
margin_bottom = 44.0
grow_horizontal = 2
theme_type_variation = "LabelTitle"
text = "8.test.title"
align = 1
valign = 1

[node name="question" type="Label" parent="test0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -189.0
margin_top = -126.0
margin_right = 189.0
margin_bottom = -98.0
grow_horizontal = 2
text = "8.test.0.question"
align = 1
valign = 1

[node name="0" type="CheckBox" parent="test0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = -52.0
margin_right = 175.0
margin_bottom = -28.0
group = SubResource( 2 )
text = "8.test.0.a0"

[node name="1" type="CheckBox" parent="test0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = -12.0
margin_right = 259.0
margin_bottom = 12.0
group = SubResource( 2 )
text = "8.test.0.a1"

[node name="2" type="CheckBox" parent="test0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = 28.0
margin_right = 307.0
margin_bottom = 52.0
group = SubResource( 2 )
text = "8.test.0.a2"

[node name="time" type="TextureProgress" parent="test0"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -88.0
margin_top = -88.0
margin_right = -24.0
margin_bottom = -24.0
max_value = 1.0
step = 0.01
value = 1.0
texture_progress = ExtResource( 3 )
fill_mode = 5
nine_patch_stretch = true

[node name="answer" type="Button" parent="test0"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -120.0
margin_right = 20.0
margin_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "8.test.answer"

[node name="test1" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="title" type="Label" parent="test1"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -2.0
margin_top = 16.0
margin_right = 2.0
margin_bottom = 44.0
grow_horizontal = 2
theme_type_variation = "LabelTitle"
text = "8.test.title"
align = 1
valign = 1

[node name="question" type="Label" parent="test1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -189.0
margin_top = -126.0
margin_right = 189.0
margin_bottom = -98.0
grow_horizontal = 2
text = "8.test.1.question"
align = 1
valign = 1

[node name="0" type="CheckBox" parent="test1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = -52.0
margin_right = 175.0
margin_bottom = -28.0
group = SubResource( 4 )
text = "8.test.1.a0"

[node name="1" type="CheckBox" parent="test1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = -12.0
margin_right = 259.0
margin_bottom = 12.0
group = SubResource( 4 )
text = "8.test.1.a1"

[node name="2" type="CheckBox" parent="test1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = 28.0
margin_right = 307.0
margin_bottom = 52.0
group = SubResource( 4 )
text = "8.test.1.a2"

[node name="time" type="TextureProgress" parent="test1"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -88.0
margin_top = -88.0
margin_right = -24.0
margin_bottom = -24.0
max_value = 1.0
step = 0.01
value = 1.0
texture_progress = ExtResource( 3 )
fill_mode = 5
nine_patch_stretch = true

[node name="answer" type="Button" parent="test1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -120.0
margin_right = 20.0
margin_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "8.test.answer"

[node name="test2" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="title" type="Label" parent="test2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -2.0
margin_top = 16.0
margin_right = 2.0
margin_bottom = 44.0
grow_horizontal = 2
theme_type_variation = "LabelTitle"
text = "8.test.title"
align = 1
valign = 1

[node name="question" type="Label" parent="test2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -189.0
margin_top = -126.0
margin_right = 189.0
margin_bottom = -98.0
grow_horizontal = 2
text = "8.test.2.question"
align = 1
valign = 1

[node name="0" type="CheckBox" parent="test2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = -52.0
margin_right = 175.0
margin_bottom = -28.0
group = SubResource( 5 )
text = "8.test.2.a0"

[node name="1" type="CheckBox" parent="test2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = -12.0
margin_right = 259.0
margin_bottom = 12.0
group = SubResource( 5 )
text = "8.test.2.a1"

[node name="2" type="CheckBox" parent="test2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = 28.0
margin_right = 307.0
margin_bottom = 52.0
group = SubResource( 5 )
text = "8.test.2.a2"

[node name="time" type="TextureProgress" parent="test2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -88.0
margin_top = -88.0
margin_right = -24.0
margin_bottom = -24.0
max_value = 1.0
step = 0.01
value = 1.0
texture_progress = ExtResource( 3 )
fill_mode = 5
nine_patch_stretch = true

[node name="answer" type="Button" parent="test2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -120.0
margin_right = 20.0
margin_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "8.test.answer"

[node name="failed" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="title" type="Label" parent="failed"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -237.5
margin_top = -41.5
margin_right = 237.5
margin_bottom = 9.5
theme_type_variation = "LabelTitle"
text = "8.test.fail"
align = 1
valign = 1

[node name="lock" type="Label" parent="failed"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -237.5
margin_top = 9.99998
margin_right = 237.5
margin_bottom = 38.0
text = "8.test.lock"
align = 1
valign = 1

[connection signal="pressed" from="test0/answer" to="." method="answer"]
[connection signal="pressed" from="test1/answer" to="." method="answer"]
[connection signal="pressed" from="test2/answer" to="." method="answer"]
